Add ToStringProcessor